--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "flowbite": "^2.5.2",
+    "ngx-cookie-service": "^18.0.0",
+    "primeng": "^17.18.12",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
